--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "marc@pedigital.de"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=5.4"
+    },
     "require-dev": {
         "phpunit/phpunit": "^4.7"
     },
